--- a/pca.Rmd
+++ b/pca.Rmd
@@ -2,7 +2,11 @@
 title: "Basic PCAs"
 author: "Clarke van Steenderen"
 date: "2025-02"
-output: pdf_document
+output:
+  html_document:
+    toc: true
+    toc_depth: 3
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
@@ -89,7 +93,7 @@ pca_plot = pca_fit_df %>%
     values = c(malignant = "darkred", benign = "forestgreen")
   ) +
   xlab("PC1 (65.6%)") +
-  ylab("PC2 (0.086%)") +
+  ylab("PC2 (8.6%)") +
   labs(color = "Outcome",
        title = "Breast cancer biopsy data") +
   # add lines through the origin 
